# 1gam_feb2017

./: Cargo.toml  README.md  appveyor.yml
assets/: level1.json  level2.json  level3.json  testmap.json  testmap2.json  testmap3.json
ci/: before_deploy.ps1  before_deploy.sh
src/: colors.rs  events.rs  facing.rs  geom.rs  input.rs  main.rs  map.rs  progress.rs  ui.rs
src/components/: blast_zone.rs  camera.rs  checkpoint.rs  collision.rs  deadly.rs  essential.rs  game_state.rs  mod.rs  physical.rs  position.rs  song.rs  sprite.rs  static_geom.rs  velocity.rs
src/components/behavior/: bird.rs  enemy.rs  hero.rs  mod.rs
src/components/sprite/: bird.rs  block.rs  checkpoint.rs  enemy.rs  hero.rs  mod.rs  note.rs  portal.rs  spikeblock.rs  spikes.rs
src/fsm/: bird.rs  mod.rs
src/fsm/enemy/: arc.rs  left_right.rs  mod.rs  up_down.rs  wander.rs
src/fsm/hero/: mod.rs
src/fsm/hero/hang/: constants.rs  hang.rs  hangless.rs  mod.rs
src/fsm/hero/jump/: constants.rs  double_jump.rs  mod.rs  single_jump.rs
src/fsm/hero/run/: constants.rs  dash.rs  mod.rs  run.rs
src/systems/: camera.rs  director.rs  mod.rs  physics.rs  song.rs  sprite.rs
src/systems/behavior/: bird.rs  enemy.rs  hero.rs  mod.rs
src/world/: context.rs  mod.rs
