[package]
name = "1gam_feb2017"
version = "0.1.0"
authors = ["Mark Schifflin <rschifflin@hotmail.com>"]

[dependencies]
piston = "0.28.0"
piston-float = "0.2.0"
piston2d-graphics = "0.20.0"
glium = "0.16.0"
piston2d-glium_graphics = "0.36.0"
conrod = {version = "0.49.0", features = ["glium"]}
specs = "0.7.1"
cpal = {git = "https://github.com/rschifflin/cpal"}
collider = "0.2.0"
futures = "0.1.9"
bitflags = "0.8"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
itertools = "0.5.9"
rand = "0.3"
