[package]
name = "noteworthy"
version = "0.1.0"
authors = ["Mark Schifflin <rschifflin@hotmail.com>"]

[dependencies]
piston = "0.28.0"
piston-float = "0.2.0"
piston2d-graphics = "0.20.0"
glium = "0.16.0"
piston2d-glium_graphics = "0.36.0"
specs = "0.7.1"
collider = "0.2.0"
bitflags = "0.8"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
itertools = "0.5.9"
rand = "0.3"
